# rs-kafka-shovel

./: Cargo.toml
src/: main.rs  topic_processor.rs
src/processors/: js_engine.rs  json.rs  mod.rs
src/transformer/: js.rs  mod.rs  task.rs
